force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <label>Notification</label>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>