force-app/main/default/objects/Notification__c/fields/BCC_Recipients__c.field-meta.xml
<CustomField>
    <fullName>BCC_Recipients__c</fullName>
    <label>BCC Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>