force-app/main/default/objects/Notification__c/fields/CC_Recipients__c.field-meta.xml
<CustomField>
    <fullName>CC_Recipients__c</fullName>
    <label>CC Recipients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>