force-app/main/default/objects/Notification__c/fields/To_Recipients__c.field-meta.xml
<CustomField>
    <fullName>To_Recipients__c</fullName>
    <label>To Recipients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>